challenge/shortbread_yamls/not-needed-anymore/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: shortbread
  annotations:    
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/ssl-passthrough: "true"
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
spec:
  rules:
  - host: shortbread.apps.foley.life
    http:
      paths:
      - path: /
        backend:
          serviceName: shortbread
          servicePort: 443
